sfdx-source/apex-queue/main/objects/JobScheduler__c/JobScheduler__c.object-meta.xml
<CustomObject>
    <description>Stores job schedulers that materialize queue jobs on a repeat cadence.</description>
    <label>Job Scheduler</label>
    <nameField>
        <label>Job Scheduler Id</label>
        <length>120</length>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Schedulers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>