sfdx-source/apex-queue/main/objects/JobScheduler__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <description>Serialized job data used when this scheduler materializes a queue job.</description>
    <inlineHelpText>Serialized data passed to each materialized queue job.</inlineHelpText>
    <label>Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>