sfdx-source/apex-queue/main/objects/JobScheduler__c/fields/EndAt__c.field-meta.xml
<CustomField>
    <fullName>EndAt__c</fullName>
    <description>Optional inclusive end of the scheduler run window for every-minute schedulers.</description>
    <inlineHelpText>Every-minute schedulers stop materializing jobs after this time.</inlineHelpText>
    <label>End At</label>
    <type>DateTime</type>
</CustomField>