sfdx-source/apex-queue/main/objects/JobScheduler__c/fields/EveryMinutes__c.field-meta.xml
<CustomField>
    <fullName>EveryMinutes__c</fullName>
    <description>Granular scheduler cadence in whole minutes. These schedulers self-reschedule one wake at a time.</description>
    <inlineHelpText>Granular repeat interval in whole minutes.</inlineHelpText>
    <label>Every Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>