sfdx-source/apex-queue/main/objects/JobScheduler__c/fields/ExecutionMode__c.field-meta.xml
<CustomField>
    <fullName>ExecutionMode__c</fullName>
    <defaultValue>&quot;WORKER&quot;</defaultValue>
    <description>Execution lane used by jobs materialized from this scheduler.</description>
    <inlineHelpText>WORKER is the default. Queueable modes dispatch through QueueableDispatch__c. INVOCABLE uses Flow Scheduled Path handoff.</inlineHelpText>
    <label>Execution Mode</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>INVOCABLE</fullName>
                <label>Invocable</label>
            </value>
            <value>
                <fullName>QUEUEABLE_CONCURRENT</fullName>
                <label>Queueable Concurrent</label>
            </value>
            <value>
                <fullName>QUEUEABLE_SERIAL</fullName>
                <label>Queueable Serial</label>
            </value>
            <value>
                <fullName>WORKER</fullName>
                <default>true</default>
                <label>Worker</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>