sfdx-source/apex-queue/main/objects/JobScheduler__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>Internal queue-scoped scheduler identifier composed from QueueName__c and the public scheduler id.</description>
    <inlineHelpText>Internal queue-scoped scheduler identifier.</inlineHelpText>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>