sfdx-source/apex-queue/main/objects/JobScheduler__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this scheduler should continue materializing queue jobs.</description>
    <inlineHelpText>Inactive schedulers do not materialize jobs.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>