sfdx-source/apex-queue/main/objects/JobScheduler__c/fields/IterationCount__c.field-meta.xml
<CustomField>
    <fullName>IterationCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Count of scheduler occurrences that have been materialized into Job__c rows.</description>
    <inlineHelpText>Number of materialized scheduler occurrences.</inlineHelpText>
    <label>Iteration Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>