sfdx-source/apex-queue/main/objects/JobScheduler__c/fields/JobName__c.field-meta.xml
<CustomField>
    <fullName>JobName__c</fullName>
    <description>Queue job name assigned to each materialized job.</description>
    <inlineHelpText>Name assigned to each materialized queue job.</inlineHelpText>
    <label>Job Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>