sfdx-source/apex-queue/main/objects/JobScheduler__c/fields/LastEnqueuedAt__c.field-meta.xml
<CustomField>
    <fullName>LastEnqueuedAt__c</fullName>
    <description>Timestamp when the scheduler last materialized a queue job.</description>
    <inlineHelpText>When this scheduler last created a Job__c row.</inlineHelpText>
    <label>Last Enqueued At</label>
    <type>DateTime</type>
</CustomField>