sfdx-source/apex-queue/main/objects/JobScheduler__c/fields/Limit__c.field-meta.xml
<CustomField>
    <fullName>Limit__c</fullName>
    <description>Optional maximum number of jobs this scheduler may materialize.</description>
    <inlineHelpText>Optional maximum materialized occurrence count.</inlineHelpText>
    <label>Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>