sfdx-source/apex-queue/main/objects/JobScheduler__c/fields/NextRunAt__c.field-meta.xml
<CustomField>
    <fullName>NextRunAt__c</fullName>
    <description>Durable next occurrence represented by this scheduler state.</description>
    <inlineHelpText>Next scheduler occurrence known to the framework.</inlineHelpText>
    <label>Next Run At</label>
    <type>DateTime</type>
</CustomField>