sfdx-source/apex-queue/main/objects/JobScheduler__c/fields/Options__c.field-meta.xml
<CustomField>
    <fullName>Options__c</fullName>
    <description>Serialized allowed JobOptions applied to each materialized job.</description>
    <inlineHelpText>Serialized attempts, priority, backoff, and parent options for materialized jobs.</inlineHelpText>
    <label>Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>