sfdx-source/apex-queue/main/objects/JobScheduler__c/fields/Pattern__c.field-meta.xml
<CustomField>
    <fullName>Pattern__c</fullName>
    <description>Cron expression for native recurring schedulers.</description>
    <inlineHelpText>Cron expression for pattern-based scheduling.</inlineHelpText>
    <label>Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>