sfdx-source/apex-queue/main/objects/JobScheduler__c/fields/ProcessorClass__c.field-meta.xml
<CustomField>
    <fullName>ProcessorClass__c</fullName>
    <description>Processor class name assigned to each materialized job.</description>
    <inlineHelpText>Processor class name used for materialized queue jobs.</inlineHelpText>
    <label>Processor Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>