sfdx-source/apex-queue/main/objects/JobScheduler__c/fields/QueueName__c.field-meta.xml
<CustomField>
    <fullName>QueueName__c</fullName>
    <description>Logical queue name that owns this scheduler.</description>
    <inlineHelpText>Queue API name, for example invoice-sync.</inlineHelpText>
    <label>Queue Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>