sfdx-source/apex-queue/main/objects/JobScheduler__c/fields/ScheduledJobId__c.field-meta.xml
<CustomField>
    <fullName>ScheduledJobId__c</fullName>
    <description>Current Scheduled Apex CronTrigger id that anchors this scheduler chain.</description>
    <inlineHelpText>Current Scheduled Apex job id for repair and stale-wake guards.</inlineHelpText>
    <label>Scheduled Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>