sfdx-source/apex-queue/main/objects/JobScheduler__c/fields/StartAt__c.field-meta.xml
<CustomField>
    <fullName>StartAt__c</fullName>
    <description>Optional start of the scheduler run window for every-minute schedulers.</description>
    <inlineHelpText>Every-minute schedulers start materializing at or after this time.</inlineHelpText>
    <label>Start At</label>
    <type>DateTime</type>
</CustomField>